--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="debug">
     <header>
-        <div class="container">
+        <div class="container text-center">
             <div class="row justify-content-between  py-4">
                 <div class="col-4">
                     <div class="cube">
@@ -50,19 +50,43 @@
         </section>
 
         <section>
-            <div class="container">
+            <div class="container text-center py-5">
                 <div class="row">
                     <div class="col">
                         titolo
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 gy-3">
+                    <div class="col">
+                        <div class="card">
+                            ciao
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            ciao
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            ciao
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            ciao
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            ciao
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            ciao
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
