--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="debug">
-    <header>
-        <div class="container text-center">
-            <div class="row justify-content-between  py-4">
+
+    <header class="text-light">
+        <div class="container text-center  py-3">
+            <div class="row justify-content-between">
                 <div class="col-4">
                     <div class="cube">
                         <h3>
@@ -29,7 +30,7 @@
     </header>
 
     <main>
-        <section class="blue">
+        <section class="blue text-light">
             <div class="my__container py-5">
                 <div class="row">
                     <div class="col">
@@ -86,6 +87,58 @@
                         <div class="card">
                             ciao
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="blue text-light">
+            <div class="container  py-5">
+                <div class="row text-center">
+                    <div class="col">
+                        titolo
+                    </div>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col">
+                        bottone
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container  py-5">
+                <div class="row text-center">
+                    <div class="col">
+                        titolo
+                    </div>
+                </div>
+                <div class="row row-cols-1 ">
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        ciao
+                    </div>
+                    <div class="col">
+                        bottone
                     </div>
                 </div>
             </div>
