--- a/index.html
+++ b/index.html
@@ -144,6 +144,32 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="col">
+                    ciao
+                </div>
+                <div class="col">
+                    ciao
+                </div>
+                <div class="col">
+                    ciao
+                </div>
+            </div>
+        </div>
+
+        <section class="footer">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        copyright
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     
 </body>
 </html>
