--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
             <div class="row justify-content-between">
                 <div class="col-4">
                     <div class="cube">
-                        <h3>
+                        <h3 class="fs-5">
                             START BOOTSTRAP
                         </h3>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="cube">
-                        PORTFOLIO ABOUT CONTACT
+                        <ul class="row row-cols-3">
+                            <li>
+                                <a href="#">
+                                    PORTFOLIO
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    ABOUT
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    CONTACT
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -36,7 +52,7 @@
                     <div class="col">
                         <div class="cube">
                             <div class="row flex-column align-items-center">
-                                <div class="col-auto">
+                                <div class="col">
                                     immagine
                                 </div>
                                 <div class="col-auto">
