--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>FREELANCER</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/c5d4023dee.js" crossorigin="anonymous"></script>
 </head>
 <body class="debug">
 
     <header class="text-light">
         <div class="container text-center  py-3">
-            <div class="row justify-content-between">
+            <div class="row justify-content-between align-items-center">
                 <div class="col-4">
                     <div class="cube">
                         <h3 class="fs-5">
@@ -22,7 +23,7 @@
                 </div>
                 <div class="col-4">
                     <div class="cube">
-                        <ul class="row row-cols-3">
+                        <ul class="row row-cols-3 justify-content-end align-items-center">
                             <li>
                                 <a href="#">
                                     PORTFOLIO
@@ -38,7 +39,14 @@
                                     CONTACT
                                 </a>
                             </li>
+                            <li class="col-auto hamburger">
+                                <a href="#">
+                                    <i class="fa-solid fa-bars"></i>
+                                </a>
+                            </li>
                         </ul>
+                            
+                        
                     </div>
                 </div>
             </div>
