--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                 <div class="row">
                     <div class="col">
                         <div class="cube">
-                            <div class="row flex-column align-items-center">
+                            <div class="row flex-column text-center">
                                 <div class="col">
-                                    immagine
+                                    <div class="circle-img">
+                                        <img src="./img/avatar.svg" alt="">
+                                    </div>
                                 </div>
                                 <div class="col-auto">
                                     testo
@@ -84,32 +86,44 @@
                 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 gy-3">
                     <div class="col">
                         <div class="card">
-                            ciao
+                            <div class="circle-img">
+                                <img src="./img/cabin.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            ciao
+                            <div class="circle-img">
+                                <img src="./img/cake.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            ciao
+                            <div class="circle-img">
+                                <img src="./img/circus.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            ciao
+                            <div class="circle-img">
+                                <img src="./img/game.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            ciao
+                            <div class="circle-img">
+                                <img src="./img/safe.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            ciao
+                            <div class="circle-img">
+                                <img src="./img/submarine.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
