--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <h1 class="pt-3">
                                 START BOOTESTRAP
                             </h1>
-                            <div class="col-6 col-md-5 col-lg-4 py-3">
+                            <div class="col-6 col-md-6 col-lg-6 py-3">
                                 <div class="row align-items-center justify-content-center">
                                     <div class="bar bg-white col"></div>
                                     <i class="col-auto fa-solid fa-star"></i>
@@ -93,7 +93,7 @@
                             <h1 class="pt-3">
                                 PORFOLIO
                             </h1>
-                            <div class="col-8 col-md-7 col-lg-6 py-3">
+                            <div class="col-12 col-md-8 col-lg-8 py-3">
                                 <div class="row align-items-center justify-content-center">
                                     <div class="bar bg-black col"></div>
                                     <i class="col-auto fa-solid fa-star"></i>
@@ -158,7 +158,7 @@
                             <h1 class="pt-3">
                                 ABOUT
                             </h1>
-                            <div class="col-8 col-md-7 col-lg-6 py-3">
+                            <div class="col-12 col-md-8 col-lg-8 py-3">
                                 <div class="row align-items-center justify-content-center">
                                     <div class="bar bg-white col"></div>
                                     <i class="col-auto fa-solid fa-star"></i>
@@ -205,7 +205,7 @@
                             <h1 class="pt-3">
                                 CONTACT ME
                             </h1>
-                            <div class="col-8 col-md-7 col-lg-6 py-3">
+                            <div class="col-12 col-md-8 col-lg-8 py-3">
                                 <div class="row align-items-center justify-content-center">
                                     <div class="bar bg-black col"></div>
                                     <i class="fs-5 col-auto fa-solid fa-star"></i>
@@ -215,37 +215,39 @@
                         </div>
                     </div>
                 </div>
-                <div class="row row-cols-1 justify-content-center">
-                    <div class="col-10">
-                        <div class="input">
-                            <input class="w-100 px-2" type="text" placeholder="Name">
+                <form action="non-ricordo">
+                    <div class="row row-cols-1 justify-content-center">
+                        <div class="col-10">
+                            <div class="input">
+                                <input class="w-100 fs-5 px-2" type="text" placeholder="Name">
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="input">
+                                <input class="w-100 fs-5 px-2" type="email" placeholder="Email Address">
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="input">
+                                <input class="w-100 fs-5 px-2" type="tel" placeholder="Phone Number">
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="input">
+                                <textarea class="w-100 fs-5 px-2 pt-4" placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="send">
+                                <a href="#">
+                                    <button class="px-3 fs-5 fs-5 py-2 my-2 text-light">
+                                        Send
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-10">
-                        <div class="input">
-                            <input class="w-100 px-2" type="email" placeholder="Email Address">
-                        </div>
-                    </div>
-                    <div class="col-10">
-                        <div class="input">
-                            <input class="w-100 px-2" type="tel" placeholder="Phone Number">
-                        </div>
-                    </div>
-                    <div class="col-10">
-                        <div class="input">
-                            <textarea class="w-100 px-2 pt-4" placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
-                        </div>
-                    </div>
-                    <div class="col-10">
-                        <div class="send">
-                            <a href="#">
-                                <button class="px-3 fs-5 py-2 my-2 text-light">
-                                    Send
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                </form>
             </div>
         </section>
     </main>
