--- a/index.html
+++ b/index.html
@@ -253,53 +253,58 @@
     </main>
 
     <footer>
+
         <section class="info py-4 py-md-0">
-            <div class="row row-cols-1 row-cols-md-3 row-gap-5 text-center py-2 py-md-5 text-light">
-                <div class="col">
-                    <div class="card__footer px-3">
-                        <h3>
-                            LOCATION
-                        </h3>
-                        <p class="fs-5">
-                            2215 Jhon Daniel Drive klark, MO 50243
-                        </p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card__footer px-3">
-                        <h3>
-                            AROUND THE WEB
-                        </h3>
-                        <div class="row social justify-content-center gap-3">
-                            <i class="col-auto p-3 fa-brands fa-facebook-f"></i>
-                            <i class="col-auto p-3 fa-brands fa-google-plus-g"></i>
-                            <i class="col-auto p-3 fa-brands fa-twitter"></i>
-                            <i class="col-auto p-3 fa-brands fa-linkedin-in"></i>
+            <div class="container-fluid">
+                <div class="row row-cols-1 row-cols-md-3 row-gap-5 text-center py-2 py-md-5 text-light">
+                    <div class="col">
+                        <div class="card__footer px-3">
+                            <h3>
+                                LOCATION
+                            </h3>
+                            <p class="fs-5">
+                                2215 Jhon Daniel Drive klark, MO 50243
+                            </p>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card__footer px-3">
-                        <h3>
-                            ABOUT FREELANCER
-                        </h3>
-                        <p class="fs-5 mb-0">
-                            Freelance is a free to use, open source Bootstrap theme created by
-                            <a href="#">
-                                Star Bootstrap
-                            </a>
-                            .
-                        </p>
+                    <div class="col">
+                        <div class="card__footer px-3">
+                            <h3>
+                                AROUND THE WEB
+                            </h3>
+                            <div class="row social justify-content-center gap-3">
+                                <i class="col-auto p-3 fa-brands fa-facebook-f"></i>
+                                <i class="col-auto p-3 fa-brands fa-google-plus-g"></i>
+                                <i class="col-auto p-3 fa-brands fa-twitter"></i>
+                                <i class="col-auto p-3 fa-brands fa-linkedin-in"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card__footer px-3">
+                            <h3>
+                                ABOUT FREELANCER
+                            </h3>
+                            <p class="fs-5 mb-0">
+                                Freelance is a free to use, open source Bootstrap theme created by
+                                <a href="#">
+                                    Star Bootstrap
+                                </a>
+                                .
+                            </p>
+                    </div>
                 </div>
             </div>
         </section>
         
         <section class="copyright">
-            <div class="row row text-center py-4 py-md-5 text-light">
-                <div class="col">
-                    Copyright
-                    <i class="fa-regular fa-copyright"></i>
-                    Your Website 2019
+            <div class="container-fluid">
+                <div class="row row text-center py-4 py-md-5 text-light">
+                    <div class="col">
+                        Copyright
+                        <i class="fa-regular fa-copyright"></i>
+                        Your Website 2019
+                    </div>
                 </div>
             </div>
         </section>
