--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="debug">
 
     <header class="text-light">
-        <div class="container py-3">
+        <div class="container py-4">
             <div class="row justify-content-between align-items-center">
                 <div class="col-6 col-md-4">
                     <div class="cube">
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="non-ricordo">
+                <form action="https://getbootstrap.com/docs/5.3/getting-started/introduction/">
                     <div class="row row-cols-1 justify-content-center">
                         <div class="col-10">
                             <div class="input">
