--- a/index.html
+++ b/index.html
@@ -12,43 +12,81 @@
 <body class="debug">
 
     <header class="text-light">
-        <div class="container py-4">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-6 col-md-4">
-                    <div class="cube">
-                        <h3>
-                            START BOOTSTRAP
-                        </h3>
+
+        <!-------------------------------------------
+        <section>
+            <div class="container py-4">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-6 col-md-4">
+                        <div class="cube">
+                            <h3>
+                                START BOOTSTRAP
+                            </h3>
+                        </div>
                     </div>
-                </div>
-                <div class="col-4">
-                    <div class="cube">
-                        <ul class="row row-cols-3 justify-content-end align-items-center text-center">
-                            <li>
-                                <a href="#">
-                                    PORTFOLIO
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    ABOUT
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    CONTACT
-                                </a>
-                            </li>
-                            <li class="col-auto hamburger">
-                                <a href="#">
-                                    <i class="fa-solid fa-bars"></i>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="col-4">
+                        <div class="cube">
+                            <ul class="row row-cols-3 justify-content-end align-items-center text-center">
+                                <li>
+                                    <a href="#">
+                                        PORTFOLIO
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        ABOUT
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        CONTACT
+                                    </a>
+                                </li>
+                                <li class="col-auto hamburger">
+                                    <a href="#">
+                                        <i class="fa-solid fa-bars"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        -------------------------------------->
+
+        <section>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg bg-transparent">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#">
+                        <h3 class="text-light">
+                            START BOOTSTRAP
+                        </h3>
+                      </a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link text-light" aria-current="page" href="#">PORTFOLIO</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">ABOUT</a>
+                          </li>
+                          <li class="nav-item dropdown">
+                            <a class="nav-link text-light dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              CONTACT
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
+            </div>
+        </section>
+        
     </header>
 
     <main>
