--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="col">
                         <div class="download">
                             <a href="#">
-                                <button class="px-3 lh-lg fs-5 text-light">
+                                <button type="button" class="btn fs-5 btn-info text-light">
                                     <i class="fa-solid fa-download"></i>
                                     Download
                                 </button>
@@ -278,9 +278,12 @@
                         <div class="col-10">
                             <div class="send">
                                 <a href="#">
+                                    <!------------
                                     <button class="px-3 fs-5 fs-5 py-2 my-2 text-light">
                                         Send
                                     </button>
+                                    ------------->
+                                    <input type="button" class="btn btn-info btn-lg text-light blue" value="Send">
                                 </a>
                             </div>
                         </div>
@@ -347,6 +350,9 @@
             </div>
         </section>
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     
 </body>
 </html>
